--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-Html Webpack Plugin:
-<pre>
-  Error: HtmlWebpackPlugin: could not load file /Users/gauravbharti/WebstormProjects/Porfolio/src/favicon.ico
-  
-  - index.js:341 Promise.all.then.catch
-    [Porfolio]/[html-webpack-plugin]/index.js:341:35
-  
-</pre>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width"/><link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500" rel="stylesheet"><title>Gaurav Bharti</title><link rel="shortcut icon" href="/favicon.ico"><link href="/0.css" rel="stylesheet"></head><body><div id="app"></div><script src="/manifest.d41d8cd98f00b204e980.js"></script><script src="/vendors.47b13d98a485fb514351.js"></script><script src="/main.b8998e676f8e769df751.js"></script></body></html>
